--- a/css/about.css
+++ b/css/about.css
@@ -59,12 +59,14 @@
     height: 190vh;
 }
 
-#pad {
+#pad,
+#pad-int {
     color: #0072ea;
 }
 
 #location,
-#cgpa {
+#cgpa,
+#cgpa-int {
     color: #c3073f;
 }
 
@@ -86,7 +88,8 @@ h1 {
     margin-top: 5vh;
 }
 
-.course {
+.course,
+.course-int {
     display: inline-block;
     padding: 3px;
 }
@@ -95,7 +98,8 @@ p {
     padding: 2px;
 }
 
-.year {
+.year,
+.year-int {
     display: inline-block;
     float: right;
     padding: 4vh;
@@ -289,4 +293,83 @@ p {
 #certificate:hover {
     color: white;
     background-color: #003580;
+}
+
+@media only screen and (max-width:1100px) {
+    * {
+        font-size: 99%;
+    }
+    .skill {
+        width: 120%;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .wrapper {
+        display: flow-root;
+    }
+    .skill {
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 675px) {
+    * {
+        font-size: 80%;
+    }
+    body {
+        margin-right: -180px;
+    }
+    #navLinkChild {
+        font-size: 1.3em;
+    }
+    img {
+        height: 100px;
+        width: 100px;
+    }
+    h1 {
+        font-size: 2em;
+    }
+    .personaldetails {
+        margin-top: -2vh;
+    }
+    .course,
+    .course-int {
+        padding: 0.5px;
+        font-size: 1.6em;
+    }
+    .year,
+    .year-int {
+        font-size: 1.8em;
+        padding: 1.5vh;
+        margin-right: -1vh;
+    }
+    #pad {
+        font-size: 1.8em;
+    }
+    #cgpa {
+        font-size: 1.8em;
+    }
+    #pad-int,
+    #cgpa-int,
+    .year-int,
+    .course-int {
+        font-size: 1.4em;
+    }
+    .lang {
+        display: flow-root;
+    }
+    .skill>p {
+        font-size: 2em;
+    }
+    .skill {
+        width: 70%;
+    }
+    .skill-bar span {
+        top: -15px;
+        font-size: 3em;
+    }
+    #award {
+        font-size: 2em;
+    }
 }
