--- a/css/contact.css
+++ b/css/contact.css
@@ -83,3 +83,9 @@ h1 {
     background-color: #071e3d;
     color: white;
 }
+
+@media only screen and (max-width: 750px) {
+    * {
+        font-size: 80%;
+    }
+}
