Finally its done

--- a/css/about.css
+++ b/css/about.css
@@ -302,6 +302,9 @@ p {
     .skill {
         width: 120%;
     }
+    .honor {
+        padding: 10px;
+    }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -310,6 +313,9 @@ p {
     }
     .skill {
         width: 90%;
+    }
+    .honor {
+        padding: 10px;
     }
 }
 
