--- a/css/project.css
+++ b/css/project.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Crimson+Text&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text:700&display=swap');
 * {
     margin: 0;
     padding: 0;
