--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Crimson+Text:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -150,5 +151,8 @@
     }
     #learnMore {
         font-size: 0.6em;
+    }
+    #mob-pro {
+        font-family: 'Open Sans', sans-serif;
     }
 }
