Finally its done

--- a/css/about.css
+++ b/css/about.css
@@ -9,6 +9,10 @@
     background-color: yellow;
 }
 
+.namedetails {
+    height: 150vh;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
